--- a/mini_project-1/pricing_card/index.html
+++ b/mini_project-1/pricing_card/index.html
@@ -23,7 +23,7 @@
                             <h4 class="fw-bold">Free</h4>
                             <p class="text-muted">For Freelancers</p>
                         </div>
-                        <h2 class="fs-1 fw-bold mt-4 mb-5">$0</h2>
+                        <h2 class="fs-1 fw-bold mt-4 mb-5">R0</h2>
                         <ul class="list-group list-group-flush fs-5 mb-5 vstack gap-2">
                             <li class="list-group-item border-0">
                                 <i class="bi bi-check2">Single User</i>
@@ -53,22 +53,56 @@
                 <div class="card text-bg-dark rounded-4 shadow-lg border-0 mb-5">
                     <div class="card-body">
                         <div>
-                            <h4 class="fw-bold">Pro</h4>
-                            <p class="text-white">For Agencies</p>
+                            <h4 class="fw-bold">Basic</h4>
+                            <p class="text-white">For Small Teams</p>
                         </div>
-                        <h2 class="fs-1 fw-bold mt-4 mb-5">$100</h2>
+                        <h2 class="fs-1 fw-bold mt-4 mb-5">R250</h2>
                         <ul class="list-group list-group-flush fs-5 mb-5 vstack gap-2">
                             <li class="list-group-item border-0 text-bg-dark">
-                                <i class="bi bi-check2">Single User</i>
+                                <i class="bi bi-check2">Up to 3 Users</i>
                             </li>
                             <li class="list-group-item border-0 text-bg-dark">
-                                <i class="bi bi-check2">10 Downloads Per Month</i>
+                                <i class="bi bi-check2">50 Downloads Per Month</i>
                             </li>
                             <li class="list-group-item border-0 text-bg-dark">
-                                <i class="bi bi-check2">Faster Files</i>
+                                <i class="bi bi-check2">Priority Support</i>
                             </li>
                             <li class="list-group-item text-bg-dark">
-                                <i class="bi bi-check2">25 Customer Packs</i>
+                                <i class="bi bi-check2">100 Customer Packs</i>
+                            </li>
+                            
+                        </ul>
+                        <div class="d-grid">
+                            <button class="btn btn-light rounded-4 mt-5 mb-4">
+                                Subcribe
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-md-6">
+                <!--Card 2-->
+                <div class="card text-bg-danger rounded-4 shadow-lg border-0 mb-5">
+                    <div class="card-body">
+                        <div>
+                            <h4 class="fw-bold">Pro</h4>
+                            <p class="text-light">For Agencies</p>
+                        </div>
+                        <h2 class="fs-1 fw-bold mt-4 mb-5">R2100</h2>
+                        <ul class="list-group list-group-flush fs-5 mb-5 vstack gap-2">
+                            <li class="list-group-item border-0 text-bg-danger">
+                                <i class="bi bi-check2">Unlimited Users</i>
+                            </li>
+                            <li class="list-group-item border-0 text-bg-danger">
+                                <i class="bi bi-check2">Unlimited Downloads</i>
+                            </li>
+                            <li class="list-group-item border-0 text-bg-danger">
+                                <i class="bi bi-check2">24/7 Support</i>
+                            </li>
+                            <li class="list-group-item text-bg-danger">
+                                <i class="bi bi-check2">Unlimited Customer Packs</i>
                             </li>
                             
                         </ul>
